--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         * { box-sizing: border-box; margin: 0; padding: 0; }
         html, body { 
             scroll-behavior: smooth; 
-            overflow-x: hidden; /* KHÓA CUỘN NGANG */
+            overflow-x: hidden;
         }
         body { font-family: var(--font-main); color: var(--color-text); line-height: 1.6; background-color: var(--color-light); }
         .container { max-width: 960px; margin: 0 auto; padding: 0 15px; }
@@ -68,10 +68,14 @@
         .slider-container:active { cursor: grabbing; }
         .slider-inner { display: flex; gap: 20px; transition: transform 0.4s ease; }
         .slider-item { flex-shrink: 0; }
-        .slider-controls button { background-color: rgba(255,255,255,0.7); color: transparent; border: none; border-radius: 50%; width: 40px; height: 40px; font-size: 0; position: absolute; top: 50%; transform: translateY(-50%); z-index: 10; background-repeat: no-repeat; background-position: center; cursor: pointer; transition: background-color 0.2s; }
-        .slider-controls button:hover { background-color: white; }
-        .slider-controls .prev-btn { left: -20px; background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath d='M15.41,16.58L10.83,12L15.41,7.41L14,6L8,12L14,18L15.41,16.58Z'/%3E%3C/svg%3E"); }
-        .slider-controls .next-btn { right: -20px; background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath d='M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z'/%3E%3C/svg%3E"); }
+        .slider-controls { display: none; }
+        @media (min-width: 768px) {
+            .slider-controls { display: block; }
+            .slider-controls button { background-color: rgba(255,255,255,0.7); color: transparent; border: none; border-radius: 50%; width: 40px; height: 40px; font-size: 0; position: absolute; top: 50%; transform: translateY(-50%); z-index: 10; background-repeat: no-repeat; background-position: center; cursor: pointer; transition: background-color 0.2s; }
+            .slider-controls button:hover { background-color: white; }
+            .slider-controls .prev-btn { left: -20px; background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath d='M15.41,16.58L10.83,12L15.41,7.41L14,6L8,12L14,18L15.41,16.58Z'/%3E%3C/svg%3E"); }
+            .slider-controls .next-btn { right: -20px; background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath d='M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z'/%3E%3C/svg%3E"); }
+        }
         .slider-pagination { text-align: center; margin-top: 15px; }
         .slider-pagination .dot { width: 10px; height: 10px; padding: 0; margin: 0 5px; border-radius: 50%; background: #ccc; border: none; cursor: pointer; }
         .slider-pagination .dot.active { background: var(--color-primary); }
@@ -80,9 +84,9 @@
         .review-card .name { font-weight: bold; }
         .review-card .stars { color: #fadb14; margin: 5px 0; }
         @media (min-width: 768px) { .review-card { min-width: calc((100% - 40px) / 3); } }
-        .video-slider .slider-item { min-width: calc((100% - 20px) / 2.5); aspect-ratio: 9/16; }
-        @media (min-width: 768px) { .video-slider .slider-item { min-width: calc((100% - 40px) / 3); } }
-        .video-thumbnail { position: relative; cursor: pointer; overflow: hidden; border-radius: var(--border-radius); box-shadow: var(--shadow); width: 100%; height: 100%; }
+        .video-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 20px; }
+        @media (min-width: 768px) { .video-grid { grid-template-columns: repeat(4, 1fr); } }
+        .video-thumbnail { position: relative; cursor: pointer; overflow: hidden; border-radius: var(--border-radius); box-shadow: var(--shadow); aspect-ratio: 9 / 16; }
         .video-thumbnail img { width: 100%; height: 100%; object-fit: cover; }
         .video-thumbnail .play-icon { position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 60px; height: 60px; background: rgba(255,255,255,0.8); border-radius: 50%; display: flex; align-items: center; justify-content: center; transition: transform 0.2s; }
         .video-thumbnail:hover .play-icon { transform: translate(-50%, -50%) scale(1.1); }
@@ -433,14 +437,19 @@
                 const itemsPerView = getItemsPerView();
                 const containerWidth = container.offsetWidth;
                 const totalGap = (Math.floor(itemsPerView) - 1) * gap;
-                const slideWidth = (containerWidth - totalGap) / Math.floor(itemsPerView);
+                let slideWidth = (containerWidth - totalGap) / itemsPerView;
+                
+                if (window.innerWidth < 768) {
+                   slideWidth = containerWidth / itemsPerView;
+                }
+
 
                 items.forEach(item => { item.style.minWidth = `${slideWidth}px`; });
 
-                const maxIndex = Math.ceil(items.length / Math.floor(itemsPerView)) - 1;
+                const maxIndex = items.length - Math.floor(itemsPerView);
                 if (currentIndex > maxIndex) currentIndex = maxIndex;
 
-                inner.style.transform = `translateX(-${currentIndex * (containerWidth + gap)}px)`;
+                inner.style.transform = `translateX(-${currentIndex * (slideWidth + gap)}px)`;
 
                 if (pagination) {
                     pagination.innerHTML = '';
@@ -455,7 +464,7 @@
             }
             
             prevBtn.addEventListener('click', () => { if (currentIndex > 0) { currentIndex--; updateSlider(); } });
-            nextBtn.addEventListener('click', () => { if (currentIndex < Math.ceil(items.length / getItemsPerView()) - 1) { currentIndex++; updateSlider(); } });
+            nextBtn.addEventListener('click', () => { if (currentIndex < items.length - getItemsPerView()) { currentIndex++; updateSlider(); } });
 
              let isDragging = false, startX = 0, currentTranslate = 0, initialTranslate = 0;
              container.addEventListener('mousedown', e => dragStart(e.clientX));
@@ -466,13 +475,13 @@
              container.addEventListener('touchend', dragEnd);
              container.addEventListener('mouseleave', dragEnd);
 
-             function dragStart(x) { isDragging = true; startX = x; inner.style.transition = 'none'; initialTranslate = -currentIndex * (container.offsetWidth + gap); }
+             function dragStart(x) { isDragging = true; startX = x; inner.style.transition = 'none'; initialTranslate = -currentIndex * (inner.querySelector('.slider-item').offsetWidth + gap); }
              function dragMove(x) { if (!isDragging) return; currentTranslate = initialTranslate + x - startX; inner.style.transform = `translateX(${currentTranslate}px)`; }
              function dragEnd() {
                  if (!isDragging) return;
                  isDragging = false;
                  const movedBy = currentTranslate - initialTranslate;
-                 if (movedBy < -50 && currentIndex < Math.ceil(items.length / getItemsPerView()) - 1) currentIndex++;
+                 if (movedBy < -50 && currentIndex < items.length - getItemsPerView()) currentIndex++;
                  if (movedBy > 50 && currentIndex > 0) currentIndex--;
                  inner.style.transition = 'transform 0.4s ease';
                  updateSlider();
