--- a/index.html
+++ b/index.html
@@ -135,21 +135,20 @@
 
 
 .video-slide {
-  width: 100%;
-  display: flex;
-  justify-content: center;
+  width: 80%; /* mobile: 1 video lộ mép */
+  max-width: 320px;
+}
+
+@media(min-width: 768px) {
+  .video-slide {
+    width: 30%; /* PC: 2–3 video */
+  }
 }
 
 .video-item {
-  width: auto;
-  height: 60vh; /* cao 60% màn hình */
+  width: 100%;
   aspect-ratio: 9/16;
   border-radius: 12px;
-}
-@media(min-width: 768px) {
-  .video-item {
-    height: 70vh; /* PC cho cao hơn */
-  }
 }
 </style>
 </head>
