--- a/index.html
+++ b/index.html
@@ -440,6 +440,7 @@
             const flktyVideo = new Flickity(videoSlider, {
                 cellAlign: 'left',
                 contain: true,
+                groupCells: true, /* <-- ĐÃ THÊM DÒNG NÀY ĐỂ BẬT TÍNH NĂNG VUỐT */
                 pageDots: true,
                 prevNextButtons: true,
                 wrapAround: true
