--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         .cta-button { display: inline-block; background-color: var(--color-primary); color: var(--color-light); font-size: 18px; font-weight: bold; text-align: center; padding: 15px 30px; border: none; border-radius: 8px; cursor: pointer; text-decoration: none; width: 100%; transition: transform 0.2s, box-shadow 0.2s; }
         .cta-button:hover { transform: translateY(-2px); box-shadow: 0 6px 16px rgba(255, 77, 77, 0.4); }
         .hero-section { background-color: var(--color-grey); padding-top: 30px; }
-        .hero-section .container { display: flex; flex-direction: column; gap: 30px; }
+        .hero-section .container { display: flex; flex-direction: column; gap: 30px; max-width: 1400px; }
         .product-gallery { flex: 1; position: relative; }
         .gallery-main .carousel-cell { width: 100%; aspect-ratio: 1/1; }
         .gallery-main .carousel-cell img { width: 100%; height: 100%; object-fit: cover; border-radius: var(--border-radius); }
@@ -41,14 +41,15 @@
         .gallery-nav .carousel-cell img { width: 100%; height: 100%; object-fit: cover; }
         .image-counter { position: absolute; bottom: 15px; right: 15px; background-color: rgba(0,0,0,0.6); color: white; padding: 5px 10px; border-radius: 20px; font-size: 14px; z-index: 10; }
         .product-info { flex: 1; }
-        .product-info h1 { font-size: 26px; margin-bottom: 10px; }
+        .product-info h1 { font-size: 24px; margin-bottom: 12px; font-weight: 700; }
+       @media(min-width: 992px) { .product-info h1 { font-size: 46px; margin-bottom: 20px; font-weight: 800; } }
         .product-info .price { margin-bottom: 15px; }
         .product-info .new-price { font-size: 32px; font-weight: bold; color: var(--color-primary); }
         .product-info .old-price { font-size: 18px; text-decoration: line-through; color: #999; margin-left: 10px; }
         .usp-quick { display: grid; grid-template-columns: 1fr 1fr; gap: 15px; margin: 20px 0; font-size: 14px; text-align: left; background-color: #fffbe6; border: 1px solid #ffe58f; border-radius: 8px; padding: 15px; }
         .usp-quick-item { display: flex; align-items: center; gap: 8px; }
         .usp-quick-item svg { width: 24px; height: 24px; flex-shrink: 0; fill: #faad14; }
-        .countdown { text-align: center; margin-top: 15px; font-size: 16px; font-weight: bold; }
+        .countdown { text-align: center; margin-top: 15px; font-size: 28px; padding: 18px 0; font-weight: 900; letter-spacing: 1px; font-weight: bold; }
         .countdown span { background-color: var(--color-dark); color: var(--color-light); padding: 5px 8px; border-radius: 4px; margin: 0 3px; }
         @media (min-width: 768px) {
             .hero-section .container { flex-direction: row; align-items: flex-start; }
@@ -91,7 +92,7 @@
         .modal-content h2 { text-align: left; margin-bottom: 20px; }
         .form-group { margin-bottom: 15px; }
         .form-group label { display: block; margin-bottom: 5px; font-weight: bold; }
-        .form-group input, .form-group select, .form-group textarea { width: 100%; padding: 12px; border: 1px solid #ccc; border-radius: 8px; font-size: 16px; }
+        .form-group input, .form-group select, .form-group textarea { width: 100%; padding: 12px; border: 1px solid #ccc; border-radius: 8px; font-size: 28px; padding: 18px 0; font-weight: 900; letter-spacing: 1px; }
         .form-group input:focus, .form-group select:focus, .form-group textarea:focus { border-color: var(--color-primary); outline: none; box-shadow: 0 0 0 2px rgba(255, 77, 77, 0.2); }
         .form-group textarea { resize: vertical; min-height: 80px; }
         .footer { background: #1c1c1c; color: #ccc; padding: 40px 0 20px; }
@@ -100,8 +101,8 @@
         .footer-usp-item span { font-size: 24px; display: block; margin-bottom: 5px; }
         .footer-info, .footer-contact { text-align: center; }
         .footer-info img { max-width: 120px; margin: 0 auto 10px; }
-        .footer-info p { font-size: 14px; margin-bottom: 10px; }
-        .footer-contact p { margin-bottom: 5px; }
+        .footer-info p { font-size: 20px; margin-bottom: 16px; }
+        .footer-contact p { margin-bottom: 12px; font-size: 20px; }
         @media (min-width: 768px) {
             .footer .container { flex-direction: row; justify-content: space-between; }
             .footer-left, .footer-right { flex: 1; }
@@ -146,6 +147,47 @@
         }
         /* === Kết thúc CSS cho Slider Video === */
 
+        @media(min-width: 992px) {
+            .hero-section { height: 100vh; display: flex; align-items: center; }
+            .hero-section .container { display: flex; flex-direction: row; align-items: center; justify-content: space-between; max-width: 1400px; }
+            .product-gallery { flex: 0 0 60%; }
+            .product-info { flex: 0 0 38%; }
+            .product-info h1 { font-size: 48px; font-weight: 900; line-height: 1.2; }
+            .product-info .new-price { font-size: 40px; }
+            .product-info .old-price { font-size: 22px; }
+            .cta-button { font-size: 22px; padding: 18px 40px; }
+        }
+
+
+        .thankyou-modal {
+            position: fixed;
+            top: 0; left: 0;
+            width: 100%; height: 100%;
+            background: rgba(0,0,0,0.7);
+            display: none; align-items: center; justify-content: center;
+            z-index: 2000;
+        }
+        .thankyou-content {
+            background: #fff;
+            padding: 30px;
+            border-radius: 16px;
+            text-align: center;
+            max-width: 400px;
+            width: 90%;
+            box-shadow: 0 4px 20px rgba(0,0,0,0.3);
+            font-size: 18px;
+        }
+        .thankyou-content button {
+            margin-top: 20px;
+            padding: 10px 20px;
+            background: #ff4d4d;
+            border: none;
+            color: #fff;
+            border-radius: 8px;
+            cursor: pointer;
+        }
+
+
         /* Top bar */
         .top-bar {
             background-color: #ff4d4d;
@@ -153,7 +195,7 @@
             text-align: center;
             padding: 8px 0;
             font-weight: bold;
-            font-size: 16px;
+            font-size: 28px; padding: 18px 0; font-weight: 900; letter-spacing: 1px;
             letter-spacing: 0.5px;
             position: sticky;
             top: 0;
@@ -189,7 +231,7 @@
         .viewer-count {
             text-align: center;
             margin: 10px 0;
-            font-size: 16px;
+            font-size: 28px; padding: 18px 0; font-weight: 900; letter-spacing: 1px;
             font-weight: 500;
         }
         .viewer-count span {
@@ -219,7 +261,7 @@
 
         /* Footer text to hơn */
         .footer {
-            font-size: 16px;
+            font-size: 28px; padding: 18px 0; font-weight: 900; letter-spacing: 1px;
         }
         .footer h3 {
             font-size: 20px;
@@ -687,8 +729,9 @@
             .finally(() => {
                 form.reset();
                 closeModal();
-                toast.classList.add('show');
-                setTimeout(() => toast.classList.remove('show'), 4000);
+                const modalTy = document.getElementById('thankyou-modal');
+                modalTy.style.display = 'flex';
+                setTimeout(() => { modalTy.style.display = 'none'; }, 4000);
                 submitButton.disabled = false;
                 submitButton.textContent = 'Xác nhận đặt hàng';
                 // Hiện popup cảm ơn
