--- a/index.html
+++ b/index.html
@@ -148,29 +148,22 @@
 
         @media(min-width: 992px) {
             .hero-section {
-                height: 100vh;
+                min-height: 100vh;
                 display: flex;
-                align-items: center;
+                align-items: flex-start; /* căn lề trên thay vì giữa */
                 justify-content: center;
+                padding-top: 40px;
             }
             .hero-section .container {
                 display: flex;
                 flex-direction: row;
-                align-items: center;
+                align-items: flex-start;
                 justify-content: space-between;
                 max-width: 1400px;
                 width: 100%;
-                height: 100%;
             }
             .product-gallery {
                 flex: 0 0 55%;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-            }
-            .product-gallery img {
-                max-height: 80vh;
-                object-fit: contain;
             }
             .product-info {
                 flex: 0 0 40%;
@@ -179,6 +172,7 @@
                 font-size: 48px;
                 font-weight: 900;
                 line-height: 1.2;
+                margin-bottom: 20px;
             }
             .product-info .new-price {
                 font-size: 42px;
@@ -189,6 +183,16 @@
             .cta-button {
                 font-size: 22px;
                 padding: 18px 40px;
+            }
+            .viewer-count {
+                margin: 15px 0;
+                font-size: 18px;
+            }
+            .countdown {
+                font-size: 20px;
+                font-weight: bold;
+                margin-top: 10px;
+                color: #ff4d4d;
             }
         }
 
