--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         .cta-button { display: inline-block; background-color: var(--color-primary); color: var(--color-light); font-size: 18px; font-weight: bold; text-align: center; padding: 15px 30px; border: none; border-radius: 8px; cursor: pointer; text-decoration: none; width: 100%; transition: transform 0.2s, box-shadow 0.2s; }
         .cta-button:hover { transform: translateY(-2px); box-shadow: 0 6px 16px rgba(255, 77, 77, 0.4); }
         
-        /* === FINAL LAYOUT - BÁM SÁT MẪU === */
+        /* === FINAL LAYOUT - TỈ LỆ 60/40 === */
 
         .top-bar-sticky {
             background-color: var(--color-primary);
@@ -67,21 +67,26 @@
         
         @media (min-width: 992px) {
             .hero-section {
-                padding: 80px 40px; /* Dùng padding lớn để tạo không gian */
+                padding: 80px 40px;
                 display: flex;
                 justify-content: center;
             }
             .hero-section .container {
                 flex-direction: row;
-                align-items: flex-start; /* Căn lề trên */
+                align-items: flex-start;
                 gap: 60px;
-                max-width: 1280px; /* Đặt lại chiều rộng tối đa hợp lý */
+                max-width: 1400px; /* Tăng chiều rộng tối đa */
                 width: 100%;
                 padding: 0; 
             }
-            .product-gallery, .product-info {
-                flex: 1 1 0;
-                max-width: 50%;
+            /* CHIA TỈ LỆ 60% ẢNH - 40% TEXT */
+            .product-gallery {
+                flex: 0 0 calc(60% - 30px); /* 60% trừ đi một nửa khoảng cách gap */
+                max-width: calc(60% - 30px);
+            }
+            .product-info {
+                flex: 0 0 calc(40% - 30px); /* 40% trừ đi một nửa khoảng cách gap */
+                max-width: calc(40% - 30px);
             }
             .product-info h1 { font-size: 42px; }
             .product-info .new-price { font-size: 38px; }
