--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         .cta-button { display: inline-block; background-color: var(--color-primary); color: var(--color-light); font-size: 18px; font-weight: bold; text-align: center; padding: 15px 30px; border: none; border-radius: 8px; cursor: pointer; text-decoration: none; width: 100%; transition: transform 0.2s, box-shadow 0.2s; }
         .cta-button:hover { transform: translateY(-2px); box-shadow: 0 6px 16px rgba(255, 77, 77, 0.4); }
         
-        /* === FINAL FONT-SIZE ADJUSTMENTS === */
+        /* === FINAL LAYOUT - TỈ LỆ 50/50 === */
 
         .top-bar-sticky {
             background-color: var(--color-primary);
@@ -45,7 +45,7 @@
             text-align: center;
             padding: 14px 10px;
             font-weight: bold;
-            font-size: 18px; /* Tăng cỡ chữ top bar */
+            font-size: 18px;
             position: sticky;
             top: 0;
             z-index: 1000;
@@ -79,22 +79,27 @@
                 width: 100%;
                 padding: 0; 
             }
-            .product-gallery {
-                flex: 0 0 calc(60% - 30px);
-                max-width: calc(60% - 30px);
-            }
+            /* CHIA TỈ LỆ CÂN BẰNG 50% - 50% */
+            .product-gallery,
             .product-info {
-                flex: 0 0 calc(40% - 30px);
-                max-width: calc(40% - 30px);
+                flex: 1 1 0;
+                max-width: calc(50% - 30px); /* 50% trừ đi một nửa khoảng cách gap */
             }
-            /* Tăng cỡ chữ các thành phần trong cột text */
-            .product-info h1 { font-size: 46px; }
-            .product-info .new-price { font-size: 42px; }
+            .product-info h1 { font-size: 52px; line-height: 1.2; }
+            .product-info .new-price { font-size: 48px; }
+            .product-info .old-price { font-size: 24px; }
             .hero-section .product-info .cta-button {
-                font-size: 22px;
-                padding: 18px 30px;
+                font-size: 24px;
+                padding: 20px 30px;
             }
-            .usp-quick { font-size: 16px; }
+            .usp-quick { 
+                font-size: 17px; 
+                padding: 20px;
+                gap: 20px;
+            }
+             .viewer-count, .countdown {
+                font-size: 18px;
+            }
         }
         
         .footer h3 { font-size: 22px; margin-bottom: 10px; }
